# quantee-taxi-simulator

./: .env.template  .flake8  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  run_code_styling.sh
client_simulator/: client.py
dispatcher/: Dockerfile  config.py  start.py  start.sh
dispatcher/api/: exceptions.py  handlers.py  routing.py
dispatcher/api/schemas/: requests.py  response.py
dispatcher/api/v1/: client.py  home.py  routes.py  taxi.py  trip.py
dispatcher/db/: alembic.ini  session.py
dispatcher/db/migrations/: env.py
dispatcher/db/migrations/versions/: ade177ad3e77_alter_taxis_table_add_network_id.py  bfc585f4f11d_initial_schema.py
dispatcher/models/: db_models.py  dto_models.py  enums.py
dispatcher/repository/: taxi_repository.py  trip_repository.py
dispatcher/schemas/: requests.py  response.py
dispatcher/services/: taxi_service.py  trip_service.py
taxi_simulator/: Dockerfile  start.py
taxi_simulator/api/: exceptions.py  handlers.py  middlewares.py  routing.py
taxi_simulator/api/schemas/: requests.py  response.py
taxi_simulator/api/v1/: taxi.py
taxi_simulator/controllers/: taxi_controller.py
taxi_simulator/models/: enums.py  models.py
tests/static_analysis/: static_analysis_test.sh
