[project]
name = "quantee"
version = "0.1.0"
description = ""
authors = [
    {name = "michal-ziolecki"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.prod.dependencies]
fastapi = "^0.116.1"
loguru = "^0.7.2"
typer = "^0.16.0"
alembic = "^1.16.4"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.tests.dependencies]
pytest = "^8.4.1"
isort = "^6.0.1"
mypy = "^1.17.0"
flake8 = "^7.3.0"
black = "^25.1.0"



[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | buck-out
  | build
  | dist
  | __pycache__
  | venv
)/
'''

[tool.isort]
force_sort_within_sections = "True"
ensure_newline_before_comments = "True"
line_length = "100"
multi_line_output = "3"
force_grid_wrap = "0"
indent = "4"
use_parentheses = "True"
include_trailing_comma = "True"
lines_after_imports = "2"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
profile = "black"
skip = ".git,.mypy_cache,.pytest_cache,.venv,build,dist,venv"

[tool.mypy]
python_version = 3.12
ignore_missing_imports = "true"
no_implicit_optional = "true"
strict = "true"
disallow_untyped_defs = "true"
exclude = [".git", ".mypy_cache", ".pytest_cache", ".venv", "buck-out", "build", "dist", "venv"]

[tool.pytest.ini_options]
minversion = "8.4.1"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
testpaths = [
    "tests",
]
